# LearningCards

./: .gitignore  LICENSE  LICENSE.md  README.md  VENDOR_LICENSES.md  carddown.py  parseExamples.sh  parse_all.sh  pyproject.toml  setup.py
examples/: cards.html  cards.md  escape_test.html  escape_test.md  markdown_demo.html  markdown_demo.md  markdown_demo_light_theme.html  markdown_test.html  markdown_test.md  markdown_test_light_theme.html  read_me.html  read_me.md
src/carddown_parser/: __init__.py  cardloader.py  cards.py  cli.py  errors.py  fileparser.py  locals.py
src/carddown_parser/config/: __init__.py  config.py  config.toml  locals.json
src/carddown_parser/mdparser/: __init__.py  emojis.json  escape_sequences.py  htmltree.py  latex.py  mdparser.py  tokens.py  utils.py
src/carddown_parser/static/: base.css  dark.css  libs.min.js  light.css  mathjax.min.js  pdf_export.css  script.js
test/: test_config.py  test_mdparser.py  test_tokenizer.py
